# opentrade

./: .env.example  CONTRIBUTING.md  FIXES_REPORT_2026-02-18.md  README.md  SELF_EVOLVING_SYSTEM.md  docker-compose.yml  pyproject.toml  test_brain.py  test_full_api.py  test_hyperliquid.py  test_hyperliquid2.py  test_real_data.py
.github/workflows/: ci.yml
config/: logrotate.conf
data/evolution/: ai_context.md
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
opentrade/agents/: __init__.py  brain.py  coordinator.py  evolution.py  graph.py  macro.py  market.py  onchain.py  risk.py  sentiment.py  strategy.py
opentrade/agents/identity/: __init__.py
opentrade/agents/prompts/: dynamic_prompts.py  templates.md
opentrade/cli/: app.py  doctor.py  trade.py  utils.py
opentrade/core/: __init__.py  config.py  database.py  store.py
opentrade/data/: history_manager.py  service.py
opentrade/data/history/: market_events.json
opentrade/engine/: __init__.py  executor.py
opentrade/engine/adapters/: ccxt.py  simulated.py
opentrade/evolution/: __init__.py  ga.py  rl.py
opentrade/services/: agent_coordinator.py  backtest_engine.py  backtest_service.py  data_quality.py  data_service.py  execution_engine.py  gateway_service.py  lifecycle_manager.py  notification_service.py  risk_engine.py  strategy_service.py  trade_executor.py
opentrade/web/: api.py
opentrade/web/static/: index.html
scripts/: backup.py  backup.sh
tests/: test_agents.py  test_core.py  test_integration.py
